update index and css
header done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
     />
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <a href="">teste</a>
+    <header class="container">
+      <nav id="primary" class="grid grid-flow-col">
+        <div>
+          <img src="assets/icons/List.svg" alt="menu icon" />
+          <strong>Menu</strong>
+        </div>
+        <div>
+          <img src="assets/Logo-Tech News.svg" alt="technews logo" />
+        </div>
+        <div>
+          <strong>Search</strong>
+          <img
+            src="assets/icons/MagnifyingGlass.svg"
+            alt="MagnifyingGlass icon"
+          />
+        </div>
+      </nav>
+      <nav id="secondary" class="grid grid-flow-col">
+        <a href="#">Artificial intelligence </a>
+        <a href="#">Blockchain</a>
+        <a href="#">Holograms </a>
+        <a href="#"> Internet</a>
+        <a href="#">Holograms </a>
+        <a href="#">Dressing </a>
+        <a href="#">Augmented reality </a>
+        <a href="#">Virtual reality </a>
+      </nav>
+    </header>
   </body>
 </html>
