--- a/index.html
+++ b/index.html
@@ -44,9 +44,17 @@
     </header>
     <main class="grid container">
       <section id="featured" class="grid grid-flow-col gap-16">
-        <div>
+        <figure class="card">
           <img src="/assets/images/Image 01.png" alt="" />
-        </div>
+
+          <figcaption>
+            <span class="content-tag">Robotic</span>
+            <h2 class="text-2xl">
+              Domestic robots are beginning to be adopted for daily tasks,
+              promising more comfort and efficiency in homes.
+            </h2>
+          </figcaption>
+        </figure>
 
         <div class="grid grid-cols-2 gap-16">
           <div><img src="/assets/images/Image 02.png" alt="" /></div>
