--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     <main class="grid container">
       <section id="featured" class="grid grid-flow-col gap-16">
         <figure class="card">
-          <img src="/assets/images/Image 01.png" alt="" />
+          <img
+            src="/assets/images/Image 01.png"
+            alt="Domestic robots are beginning to be adopted for daily tasks,
+          promising more comfort and efficiency in homes."
+          />
 
           <figcaption>
             <span class="content-tag">Robotic</span>
@@ -57,10 +61,62 @@
         </figure>
 
         <div class="grid grid-cols-2 gap-16">
-          <div><img src="/assets/images/Image 02.png" alt="" /></div>
-          <div><img src="/assets/images/Image 03.png" alt="" /></div>
-          <div><img src="/assets/images/Image 04.png" alt="" /></div>
-          <div><img src="/assets/images/Image 05.png" alt="" /></div>
+          <figure class="card">
+            <img
+              src="/assets/images/Image 02.png"
+              alt=" New 3D Projector Smartphone Hits the Market, Transforming the
+            Way We View Our Screens"
+            />
+            <figcaption>
+              <span class="content-tag">holograms</span>
+              <h2 class="text-lg">
+                New 3D Projector Smartphone Hits the Market, Transforming the
+                Way We View Our Screens
+              </h2>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img
+              src="/assets/images/Image 03.png"
+              alt="6G technology arrives in Brazilian cities, promising to
+            revolutionize the way we live and communicate."
+            />
+            <figcaption>
+              <span class="content-tag">Internet</span>
+              <h2 class="text-lg">
+                6G technology arrives in Brazilian cities, promising to
+                revolutionize the way we live and communicate.
+              </h2>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img
+              src="/assets/images/Image 04.png"
+              alt="ompany launches smart watch capable of monitoring mental
+            health, offering valuable insights for personal well-being."
+            />
+            <figcaption>
+              <span class="content-tag">Wearables</span>
+              <h2 class="text-lg">
+                Company launches smart watch capable of monitoring mental
+                health, offering valuable insights for personal well-being.
+              </h2>
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img
+              src="/assets/images/Image 05.png"
+              alt="Schools embrace VR technology to provide immersive experiences,
+            transforming traditional learning."
+            />
+            <figcaption>
+              <span class="content-tag">Virtual Reality </span>
+              <h2 class="text-lg">
+                Schools embrace VR technology to provide immersive experiences,
+                transforming traditional learning.
+              </h2>
+            </figcaption>
+          </figure>
         </div>
       </section>
     </main>
