--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <span class="content-tag">Wearables</span>
               <h2 class="text-lg">
                 Company launches smart watch capable of monitoring mental
-                health, offering valuable insights for personal well-being.
+                health, offering valuable insights for...
               </h2>
             </figcaption>
           </figure>
@@ -116,6 +116,50 @@
                 transforming traditional learning.
               </h2>
             </figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <section id="weekly">
+        <header class="grid grid-flow-col">
+          <h2>Most read of the week</h2>
+          <a href="" class="grid grid-flow-col">
+            <strong>See all</strong>
+            <span></span>
+          </a>
+        </header>
+        <div class="grid gap-16">
+          <figure>
+            <span class="content-tag">vehicles </span>
+            <img src="/assets/images/Image 06.png" alt="" />
+            <p>
+              Prototype flying vehicle is unveiled, marking the beginning of the
+              era of pers...
+            </p>
+          </figure>
+          <figure>
+            <span class="content-tag">holograms </span>
+            <img src="/assets/images/Image 07.png" alt="" />
+            <p>
+              Video conferencing platform introduces new hologram feature,
+              making virtual calls...
+            </p>
+          </figure>
+          <figure>
+            <span class="content-tag">Virtual reality </span>
+            <img src="/assets/images/Image 08.png" alt="" />
+            <p>
+              New generation of video game consoles is launched, bringing
+              ultra-realistic graphics and fully immersive gaming experiences.
+            </p>
+          </figure>
+          <figure>
+            <span class="content-tag">Internet </span>
+            <img src="/assets/images/Image 09.png" alt="" />
+            <p>
+              Project seeks to offer high-speed internet in remote areas via
+              satellites.
+            </p>
           </figure>
         </div>
       </section>
