--- a/index.html
+++ b/index.html
@@ -163,6 +163,178 @@
           </figure>
         </div>
       </section>
+
+      <section id="ai">
+        <header class="grid grid-flow-col">
+          <h3>Highlights of the artificial intelligence</h3>
+          <a href="#" class="grid grid-flow-col">
+            <strong>See all</strong>
+            <span></span>
+          </a>
+        </header>
+        <div class="grid gap-32">
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Artificial intelligence</span>
+              <h3 class="text-xl">
+                Company surprises the world by announcing an algorithm capable
+                of predicting future events with high accuracy.
+              </h3>
+              <p class="text-sm">
+                In a surprising breakthrough in artificial intelligence, a
+                company has announced the development of an algorithm capable of
+                predicting future events with remarkable accuracy. Find out how
+                this technology is pushing the boundaries of forecasting and
+                what the implications are for everything from finance to
+                strat...
+              </p>
+            </div>
+            <div>
+              <img src="/assets/images/Image 10.png" alt="" />
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Artificial intelligence</span>
+              <h3 class="text-xl">
+                Portable device promises to instantly translate different
+                languages, facilitating global communication.
+              </h3>
+              <p class="text-sm">
+                In an increasingly connected world, borderless communication is
+                essential. In this context, a portable device has emerged as a
+                true linguistic hero, promising to break down language barriers
+                instantly. Imagine being able to communicate fluently anywhere
+                in the world, regardless...
+              </p>
+            </div>
+            <div>
+              <img src="/assets/images/Image 11.png" alt="" />
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Artificial intelligence</span>
+              <h3 class="text-xl">
+                Created to assist the elderly, companion robots are gaining
+                popularity, offering emotional and physical support to users.
+              </h3>
+              <p class="text-sm">
+                Technology is not only advancing, but it is also seeking to make
+                life more meaningful for all generations. In the current
+                scenario, social robots, designed especially to offer support
+                and companionship to the elderly, are gaining prominence. More
+                than mere assistants, these robots are programmed to provide
+              </p>
+            </div>
+            <div>
+              <img src="/assets/images/Image 12.png" alt="" />
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <span class="content-tag">Artificial intelligence</span>
+              <h3 class="text-xl">
+                Application uses artificial intelligence to help users stay
+                focused and increase productivity in their daily lives.
+              </h3>
+              <p class="text-sm">
+                In the whirlwind of modern life, where distractions abound, an
+                innovative app emerges as an indispensable ally for those
+                seeking greater concentration and efficiency in their daily
+                lives. Using advanced artificial intelligence algorithms, this
+                app promises more than just manag...
+              </p>
+            </div>
+            <div>
+              <img src="/assets/images/Image 13.png" alt="" />
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <div>
+        <div id="ads">
+          <img src="/assets/Ads.png" alt="" />
+        </div>
+      </div>
+
+      <section id="more">
+        <header class="grid grid-flow-col">
+          <h3>Did you see it here?</h3>
+          <a href="#" class="grid grid-flow-col">
+            <strong>See all</strong>
+            <span></span>
+          </a>
+        </header>
+
+        <div class="grid gap-32">
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img
+                src="/assets/images/Image 14.png"
+                alt="Environmental monitoring application gains prominence, encouraging ecological practices and promot...
+              "
+              />
+            </div>
+            <div>
+              <span class="content-tag">Software</span>
+              <h3 class="text-xl">
+                Environmental monitoring application gains prominence,
+                encouraging ecological practices and promot...
+              </h3>
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="/assets/images/Image 15.png" alt="" />
+            </div>
+            <div>
+              <span class="content-tag">Virtual Reality</span>
+              <h3 class="text-xl">
+                Virtual reality glasses with haptic feedback provide a complete
+                sensory experience, immersing users in digital environments...
+              </h3>
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="/assets/images/Image 16.png" alt="" />
+            </div>
+            <div>
+              <span class="content-tag">Cryptocurrencies </span>
+              <h3 class="text-xl">
+                A new digital currency based on sustainable technologies
+                emerges, seeking to minimize the environmental ...
+              </h3>
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="/assets/images/Image 17.png" alt="" />
+            </div>
+            <div>
+              <span class="content-tag">Drones </span>
+              <h3 class="text-xl">
+                E-commerce companies deploy fleets of drones for fast
+                deliveries, transforming the online commerce landscape.
+              </h3>
+            </div>
+          </article>
+          <article class="grid grid-flow-col gap-16">
+            <div>
+              <img src="/assets/images/Image 18.png" alt="" />
+            </div>
+            <div>
+              <span class="content-tag">3D printing </span>
+              <h3 class="text-xl">
+                Innovative technology allows 3D printing of human organs,
+                revolutionizing medicine and the transplant waiting list.
+              </h3>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
