update html and css
setting the last cards

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             <span></span>
           </a>
         </header>
+
         <div class="grid gap-32">
           <article class="grid grid-flow-col gap-16">
             <div>
@@ -224,7 +225,7 @@
                 life more meaningful for all generations. In the current
                 scenario, social robots, designed especially to offer support
                 and companionship to the elderly, are gaining prominence. More
-                than mere assistants, these robots are programmed to provide
+                than mere assistants, these robots are...
               </p>
             </div>
             <div>
@@ -253,88 +254,105 @@
         </div>
       </section>
 
-      <div>
+      <aside>
         <div id="ads">
           <img src="/assets/Ads.png" alt="" />
         </div>
-      </div>
 
-      <section id="more">
-        <header class="grid grid-flow-col">
-          <h3>Did you see it here?</h3>
-          <a href="#" class="grid grid-flow-col">
-            <strong>See all</strong>
-            <span></span>
-          </a>
-        </header>
+        <section id="more">
+          <header class="grid grid-flow-col">
+            <h3>Did you see it here?</h3>
+            <a href="#" class="grid grid-flow-col">
+              <strong>See all</strong>
+              <span></span>
+            </a>
+          </header>
+  
+          <div class="grid gap-32">
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img
+                  src="/assets/images/Image 14.png"
+                  alt="Environmental monitoring application gains prominence, encouraging ecological practices and promot...
+                "
+                />
+              </div>
+              <div>
+                <span class="content-tag">Software</span>
+                <h3 class="text-xl">
+                  Environmental monitoring application gains prominence,
+                  encouraging ecolog...
+                </h3>
+              </div>
+            </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img
+                  src="/assets/images/Image 15.png"
+                  alt="Virtual reality glasses with haptic feedback provide a complete
+                sensory experience, immersing users in digital environments..."
+                />
+              </div>
+              <div>
+                <span class="content-tag">Virtual Reality</span>
+                <h3 class="text-xl">
+                  Virtual reality glasses with haptic feedback provide a complete
+                  sensory exper...
+                </h3>
+              </div>
+            </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img
+                  src="/assets/images/Image 16.png"
+                  alt="A new digital currency based on sustainable technologies
+                emerges, seeking to minimize the environmental ..."
+                />
+              </div>
+              <div>
+                <span class="content-tag">Cryptocurrencies </span>
+                <h3 class="text-xl">
+                  A new digital currency based on sustainable technologies
+                  emerges, seeking to minimize the env...
+                </h3>
+              </div>
+            </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img
+                  src="/assets/images/Image 17.png"
+                  alt="E-commerce companies deploy fleets of drones for fast
+                deliveries, transforming the online commerce landscape."
+                />
+              </div>
+              <div>
+                <span class="content-tag">Drones </span>
+                <h3 class="text-xl">
+                  E-commerce companies deploy fleets of drones for fast
+                  deliveries, transforming th...
+                </h3>
+              </div>
+            </article>
+            <article class="grid grid-flow-col gap-16">
+              <div>
+                <img
+                  src="/assets/images/Image 18.png"
+                  alt="Innovative technology allows 3D printing of human organs,
+                revolutionizing medicine and the transplant waiting list."
+                />
+              </div>
+              <div>
+                <span class="content-tag">3D printing </span>
+                <h3 class="text-xl">
+                  Innovative technology allows 3D printing of human organs,
+                  revolutionizing medic...
+              </div>
+            </article>
+          </div>
+        </section>
+      </aside>
 
-        <div class="grid gap-32">
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img
-                src="/assets/images/Image 14.png"
-                alt="Environmental monitoring application gains prominence, encouraging ecological practices and promot...
-              "
-              />
-            </div>
-            <div>
-              <span class="content-tag">Software</span>
-              <h3 class="text-xl">
-                Environmental monitoring application gains prominence,
-                encouraging ecological practices and promot...
-              </h3>
-            </div>
-          </article>
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="/assets/images/Image 15.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Virtual Reality</span>
-              <h3 class="text-xl">
-                Virtual reality glasses with haptic feedback provide a complete
-                sensory experience, immersing users in digital environments...
-              </h3>
-            </div>
-          </article>
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="/assets/images/Image 16.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Cryptocurrencies </span>
-              <h3 class="text-xl">
-                A new digital currency based on sustainable technologies
-                emerges, seeking to minimize the environmental ...
-              </h3>
-            </div>
-          </article>
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="/assets/images/Image 17.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">Drones </span>
-              <h3 class="text-xl">
-                E-commerce companies deploy fleets of drones for fast
-                deliveries, transforming the online commerce landscape.
-              </h3>
-            </div>
-          </article>
-          <article class="grid grid-flow-col gap-16">
-            <div>
-              <img src="/assets/images/Image 18.png" alt="" />
-            </div>
-            <div>
-              <span class="content-tag">3D printing </span>
-              <h3 class="text-xl">
-                Innovative technology allows 3D printing of human organs,
-                revolutionizing medicine and the transplant waiting list.
-              </h3>
-            </div>
-          </article>
-        </div>
-      </section>
+      
     </main>
   </body>
 </html>
