--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section id="featured" class="grid grid-flow-col gap-16">
         <figure class="card">
           <img
-            src="/assets/images/Image 01.png"
+            src="assets/images/Image 01.png"
             alt="Domestic robots are beginning to be adopted for daily tasks,
           promising more comfort and efficiency in homes."
           />
@@ -63,7 +63,7 @@
         <div class="grid grid-cols-2 gap-16">
           <figure class="card">
             <img
-              src="/assets/images/Image 02.png"
+              src="assets/images/Image 02.png"
               alt=" New 3D Projector Smartphone Hits the Market, Transforming the
             Way We View Our Screens"
             />
@@ -77,7 +77,7 @@
           </figure>
           <figure class="card">
             <img
-              src="/assets/images/Image 03.png"
+              src="assets/images/Image 03.png"
               alt="6G technology arrives in Brazilian cities, promising to
             revolutionize the way we live and communicate."
             />
@@ -91,7 +91,7 @@
           </figure>
           <figure class="card">
             <img
-              src="/assets/images/Image 04.png"
+              src="assets/images/Image 04.png"
               alt="ompany launches smart watch capable of monitoring mental
             health, offering valuable insights for personal well-being."
             />
@@ -105,7 +105,7 @@
           </figure>
           <figure class="card">
             <img
-              src="/assets/images/Image 05.png"
+              src="assets/images/Image 05.png"
               alt="Schools embrace VR technology to provide immersive experiences,
             transforming traditional learning."
             />
@@ -131,7 +131,7 @@
         <div class="grid gap-16">
           <figure>
             <span class="content-tag">vehicles </span>
-            <img src="/assets/images/Image 06.png" alt="" />
+            <img src="assets/images/Image 06.png" alt="" />
             <p>
               Prototype flying vehicle is unveiled, marking the beginning of the
               era of pers...
@@ -139,7 +139,7 @@
           </figure>
           <figure>
             <span class="content-tag">holograms </span>
-            <img src="/assets/images/Image 07.png" alt="" />
+            <img src="assets/images/Image 07.png" alt="" />
             <p>
               Video conferencing platform introduces new hologram feature,
               making virtual calls...
@@ -147,7 +147,7 @@
           </figure>
           <figure>
             <span class="content-tag">Virtual reality </span>
-            <img src="/assets/images/Image 08.png" alt="" />
+            <img src="assets/images/Image 08.png" alt="" />
             <p>
               New generation of video game consoles is launched, bringing
               ultra-realistic graphics and fully immersive gaming experiences.
@@ -155,7 +155,7 @@
           </figure>
           <figure>
             <span class="content-tag">Internet </span>
-            <img src="/assets/images/Image 09.png" alt="" />
+            <img src="assets/images/Image 09.png" alt="" />
             <p>
               Project seeks to offer high-speed internet in remote areas via
               satellites.
@@ -191,7 +191,7 @@
               </p>
             </div>
             <div>
-              <img src="/assets/images/Image 10.png" alt="" />
+              <img src="assets/images/Image 10.png" alt="" />
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
@@ -210,7 +210,7 @@
               </p>
             </div>
             <div>
-              <img src="/assets/images/Image 11.png" alt="" />
+              <img src="assets/images/Image 11.png" alt="" />
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
@@ -229,7 +229,7 @@
               </p>
             </div>
             <div>
-              <img src="/assets/images/Image 12.png" alt="" />
+              <img src="assets/images/Image 12.png" alt="" />
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
@@ -248,7 +248,7 @@
               </p>
             </div>
             <div>
-              <img src="/assets/images/Image 13.png" alt="" />
+              <img src="assets/images/Image 13.png" alt="" />
             </div>
           </article>
         </div>
@@ -256,7 +256,7 @@
 
       <aside>
         <div id="ads">
-          <img src="/assets/Ads.png" alt="" />
+          <img src="assets/Ads.png" alt="" />
         </div>
 
         <section id="more">
@@ -272,7 +272,7 @@
             <article class="grid grid-flow-col gap-16">
               <div>
                 <img
-                  src="/assets/images/Image 14.png"
+                  src="assets/images/Image 14.png"
                   alt="Environmental monitoring application gains prominence, encouraging ecological practices and promot...
                 "
                 />
@@ -288,7 +288,7 @@
             <article class="grid grid-flow-col gap-16">
               <div>
                 <img
-                  src="/assets/images/Image 15.png"
+                  src="assets/images/Image 15.png"
                   alt="Virtual reality glasses with haptic feedback provide a complete
                 sensory experience, immersing users in digital environments..."
                 />
@@ -304,7 +304,7 @@
             <article class="grid grid-flow-col gap-16">
               <div>
                 <img
-                  src="/assets/images/Image 16.png"
+                  src="assets/images/Image 16.png"
                   alt="A new digital currency based on sustainable technologies
                 emerges, seeking to minimize the environmental ..."
                 />
@@ -320,7 +320,7 @@
             <article class="grid grid-flow-col gap-16">
               <div>
                 <img
-                  src="/assets/images/Image 17.png"
+                  src="assets/images/Image 17.png"
                   alt="E-commerce companies deploy fleets of drones for fast
                 deliveries, transforming the online commerce landscape."
                 />
@@ -336,7 +336,7 @@
             <article class="grid grid-flow-col gap-16">
               <div>
                 <img
-                  src="/assets/images/Image 18.png"
+                  src="assets/images/Image 18.png"
                   alt="Innovative technology allows 3D printing of human organs,
                 revolutionizing medicine and the transplant waiting list."
                 />
