--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       <nav id="primary" class="grid grid-flow-col">
         <div>
           <img src="assets/icons/List.svg" alt="menu icon" />
-          <strong >Menu</strong>
+          <strong class="mobile" >Menu</strong>
+         
         </div>
         <div>
           <img src="assets/Logo-Tech News.svg" alt="technews logo" />
         </div>
         <div>
-          <strong>Search</strong>
+          <strong class="mobile">Search</strong>
           <img
             src="assets/icons/MagnifyingGlass.svg"
             alt="MagnifyingGlass icon"
