--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
     </header>
     <main class="grid container">
       <section id="featured" class="grid grid-flow-col gap-16">
-        <figure class="card">
+        <figure class="card card-mobile1">
           <img
             src="assets/images/Image 01.png"
             alt="Domestic robots are beginning to be adopted for daily tasks,
           promising more comfort and efficiency in homes."
           />
 
-          <figcaption>
-            <span class="content-tag">Robotic</span>
-            <h2 class="text-2xl">
+          <figcaption >
+            <span class="content-tag content-tag_mobile">Robotic</span>
+            <h2 class="text-2xl h2-mobile">
               Domestic robots are beginning to be adopted for daily tasks,
               promising more comfort and efficiency in homes.
             </h2>
           </figcaption>
         </figure>
 
-        <div class="grid grid-cols-2 gap-16">
+        <div class="grid grid-cols-2 gap-16 flex-mobile">
           <figure class="card">
             <img
               src="assets/images/Image 02.png"
