update section css
setting css style for mobile
div with relative position

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             Way We View Our Screens"
             />
             <figcaption>
-              <span class="content-tag">holograms</span>
-              <h2 class="text-lg">
+              <span class="content-tag content-tag_mobile2">holograms</span>
+              <h2 class="text-lg h2-mobile2">
                 New 3D Projector Smartphone Hits the Market, Transforming the
-                Way We View Our Screens
+                Way We View Our Screens 
               </h2>
             </figcaption>
           </figure>
@@ -83,8 +83,8 @@
             revolutionize the way we live and communicate."
             />
             <figcaption>
-              <span class="content-tag">Internet</span>
-              <h2 class="text-lg">
+              <span class="content-tag content-tag_mobile2">Internet</span>
+              <h2 class="text-lg h2-mobile2">
                 6G technology arrives in Brazilian cities, promising to
                 revolutionize the way we live and communicate.
               </h2>
@@ -97,8 +97,8 @@
             health, offering valuable insights for personal well-being."
             />
             <figcaption>
-              <span class="content-tag">Wearables</span>
-              <h2 class="text-lg">
+              <span class="content-tag content-tag_mobile2">Wearables</span>
+              <h2 class="text-lg h2-mobile2">
                 Company launches smart watch capable of monitoring mental
                 health, offering valuable insights for...
               </h2>
@@ -111,8 +111,8 @@
             transforming traditional learning."
             />
             <figcaption>
-              <span class="content-tag">Virtual Reality </span>
-              <h2 class="text-lg">
+              <span class="content-tag content-tag_mobile2">Virtual Reality </span>
+              <h2 class="text-lg  h2-mobile2">
                 Schools embrace VR technology to provide immersive experiences,
                 transforming traditional learning.
               </h2>
