--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             <span></span>
           </a>
         </header>
-        <div class="grid gap-16">
+        <div class="grid gap-16 flex-mobile">
           <figure>
-            <span class="content-tag">vehicles </span>
+            <span class="content-tag content-tag_mobile3">vehicles </span>
             <img src="assets/images/Image 06.png" alt="" />
             <p>
               Prototype flying vehicle is unveiled, marking the beginning of the
@@ -139,7 +139,7 @@
             </p>
           </figure>
           <figure>
-            <span class="content-tag">holograms </span>
+            <span class="content-tag content-tag_mobile3">holograms </span>
             <img src="assets/images/Image 07.png" alt="" />
             <p>
               Video conferencing platform introduces new hologram feature,
@@ -147,7 +147,7 @@
             </p>
           </figure>
           <figure>
-            <span class="content-tag">Virtual reality </span>
+            <span class="content-tag content-tag_mobile3">Virtual reality </span>
             <img src="assets/images/Image 08.png" alt="" />
             <p>
               New generation of video game consoles is launched, bringing
@@ -155,7 +155,7 @@
             </p>
           </figure>
           <figure>
-            <span class="content-tag">Internet </span>
+            <span class="content-tag content-tag_mobile3">Internet </span>
             <img src="assets/images/Image 09.png" alt="" />
             <p>
               Project seeks to offer high-speed internet in remote areas via
@@ -176,8 +176,8 @@
 
         <div class="grid gap-32">
           <article class="grid grid-flow-col gap-16">
-            <div>
-              <span class="content-tag">Artificial intelligence</span>
+            <div class="item">
+              <span class="content-tag content-tag_ai ">Artificial intelligence</span>
               <h3 class="text-xl">
                 Company surprises the world by announcing an algorithm capable
                 of predicting future events with high accuracy.
@@ -191,13 +191,13 @@
                 strat...
               </p>
             </div>
-            <div>
+            <div class="item">
               <img src="assets/images/Image 10.png" alt="" />
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
-            <div>
-              <span class="content-tag">Artificial intelligence</span>
+            <div class="item">
+              <span class="content-tag content-tag_ai ">Artificial intelligence</span>
               <h3 class="text-xl">
                 Portable device promises to instantly translate different
                 languages, facilitating global communication.
@@ -210,13 +210,13 @@
                 in the world, regardless...
               </p>
             </div>
-            <div>
+            <div class="item">
               <img src="assets/images/Image 11.png" alt="" />
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
-            <div>
-              <span class="content-tag">Artificial intelligence</span>
+            <div class="item">
+              <span class="content-tag content-tag_ai ">Artificial intelligence</span>
               <h3 class="text-xl">
                 Created to assist the elderly, companion robots are gaining
                 popularity, offering emotional and physical support to users.
@@ -229,13 +229,13 @@
                 than mere assistants, these robots are...
               </p>
             </div>
-            <div>
+            <div class="item">
               <img src="assets/images/Image 12.png" alt="" />
             </div>
           </article>
           <article class="grid grid-flow-col gap-16">
-            <div>
-              <span class="content-tag">Artificial intelligence</span>
+            <div class="item">
+              <span class="content-tag content-tag_ai ">Artificial intelligence</span>
               <h3 class="text-xl">
                 Application uses artificial intelligence to help users stay
                 focused and increase productivity in their daily lives.
@@ -248,7 +248,7 @@
                 app promises more than just manag...
               </p>
             </div>
-            <div>
+            <div class="item">
               <img src="assets/images/Image 13.png" alt="" />
             </div>
           </article>
